maze.pledge.PledgeMaze.scala.error
Erreur de compilation :
PledgeMaze:78: error: not found: value letFollowerMode
    sumTurns = letFollowerMode(sumTurns, isFirstRun);
               ^PledgeMaze:78: error: not found: value isFirstRun
    sumTurns = letFollowerMode(sumTurns, isFirstRun);
                                         ^